# ComfyUI_ResolutionSelector

./: .gitignore  README.md  __init__.py  pyproject.toml  resolution_selector.py  test_resolution_selector.py
.github/workflows/: publish.yml
web/js/: resolution_selector.js
