[project]
name = "comfyui_stringessentials"
description = "Custom node for ComfyUI providing easy resolution and empty latent selection for image generation workflows."
version = "2.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_ResolutionSelector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bradsec"
DisplayName = "ComfyUI_ResolutionSelector"
Icon = ""